# streamlit-saas-starter

./: .env.example  .gitignore  Dockerfile  Login.py  README.md  features.txt  index.html  menu.py  pyproject.toml  requirements.txt  server.py
.streamlit/: config.toml
pages/: 1_Home.py  2_Dashboard.py  admin.py  super-admin.py  user.py
pages/styles/: main.css
